# FileHeaderAnalyser

./: main.cpp
FileAnalyser/: CMakeLists.txt
FileAnalyser/src/: analyser.cpp  analyser.h  main.cpp
FileAnalyzer_Upgrade_v1/FileAnalyzer/: CMakeLists.txt
FileAnalyzer_Upgrade_v1/FileAnalyzer/src/: analyzer.cpp  analyzer.h  main.cpp
FileAnalyzer_Upgrade_v1/FileAnalyzer/src/utils/: hash.cpp  hash.h  json_output.cpp  json_output.h
